--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
             document.body.style.color = setContrast(rgb);
         </script>
         <h2>
-        You are being served from {{ ansible_local['facts']['cloud´] }} for this request.
+        You are being served from {{ ansible_local['facts']['cloud'] }} for this request.
         </h2>
     </body>
 </html>
