--- a/roles/geerlingguy.haproxy/templates/haproxy.cfg.j2
+++ b/roles/geerlingguy.haproxy/templates/haproxy.cfg.j2
@@ -2,7 +2,7 @@ global
   log /dev/log  local0
   log /dev/log  local1 notice
 {% if haproxy_socket != '' %}
-  stats socket {{ haproxy_socket }} level admin
+  stats socket {{ haproxy_socket }} mode 666 level admin
 {% endif %}
 {% if haproxy_chroot != '' %}
   chroot {{ haproxy_chroot }}
